# api_algorithms

./: .gitignore  .replit  algo_pyramid.py  api.py  buildah.sh  confs.py  loggingsys.py  main.py  pyproject.toml  readme.md  replit.nix  requirement.txt
appscript/: readme.md
invest_algorithms/: algo_pyramid.py  api.py  confs.py  main.py
tests/: test_algo_pyramid.py
