[tool.poetry]
name = "repl_python3_apialgorithms"
version = "0.1.0"
description = ""
authors = ["YuehChengChang <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
