[tool.poetry]
name = "repl_python3_apialgorithms"
version = "0.1.0"
description = ""
authors = ["YuehChengChang <<ycchang.pmp@gmail.com>>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
