[tool.poetry]
name = "invest_algorithms"
version = "0.1.0"
description = ""
authors = ["YuehChengChang <<ycchang.pmp@gmail.com>>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
jupyterlab = "^4.0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
